admin/src/components/base/Combobox/Combobox.css
.combobox {
	position: relative;
}

.combobox-list {
	visibility: hidden;
	opacity: 0;
	transform: scale(0.75);
	height: 0;
	width: 0;
	position: absolute;
	left: 0;
	top: 100%;
	max-height: 300px;
	transition:
		opacity 0.2s,
		transform 0.2s;
	z-index: 10;
	box-shadow: var(--sl-shadow-medium);
}

.combobox-list--top {
	top: unset;
	bottom: var(--combobox-input-height);
}

.combobox-list--computing-position {
	visibility: hidden !important;
	opacity: 0 !important;
}

.combobox--open .combobox-list {
	visibility: visible;
	opacity: 1;
	transform: scale(1);
	min-width: 100%;
	height: auto;
}

.combobox-input {
	position: relative;
}

.combobox-input__error {
	position: absolute;
	font-size: 12px;
	color: var(--sl-color-danger-500);
	padding: 1px 3px 1px 5px;
	line-height: 1.3;
	width: 100%;
	white-space: nowrap;
	overflow: hidden;
	transition: background-color 0.5s;
	border-radius: 3px;
}

.combobox-input__error--expanded {
	white-space: unset;
	line-height: 1.5;
	position: static;
	margin-bottom: -10px;
}

.combobox-input__error-overlay {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: end;
	align-items: center;
	background: transparent;
	background: linear-gradient(90deg, #fff0 0% 80%, #f9f9f9 91% 100%);
	cursor: pointer;
	padding-right: 9px;
	padding-top: 1px;
}

.combobox-input__error-expand {
	background-color: var(--sl-color-danger-100);
	padding: 0 5px;
	border-radius: 3px;
}

.combobox-input__error-icon {
	color: var(--sl-color-danger-500);
	font-size: 12px;
}

.combobox--expression .combobox-list {
	padding-top: 0;
	padding-bottom: 0;
}

.combobox-input sl-input::part(base) {
	position: relative;
}

.combobox-input sl-input::part(suffix) {
	position: absolute;
	right: 0;
	top: 50%;
	transform: translateY(-50%);
	background-color: var(--bg-primary);
	cursor: pointer;
	height: 100%;
}

.combobox .combobox-input__caret-icon {
	will-change: transform;
	transition: transform 0.2s;
	color: var(--sl-color-neutral-900);
}

.combobox--open .combobox-input__caret-icon {
	transform: rotate(-180deg);
}

.combobox-input sl-input::part(input) {
	font-family: var(--monospace-fonts);
	font-size: 14px;
}

.combobox--caret .combobox-input sl-input::part(input) {
	padding-right: 35px;
}

.combobox-input sl-input::part(input)::placeholder {
	font-family: var(--system-fonts);
}

.combobox-list__tabs::part(nav) {
	position: sticky;
	top: 0;
	background-color: var(--bg-primary);
	z-index: 10;
	padding: 0;
}

.combobox-list__function {
	padding: var(--sl-spacing-medium);
	background-color: var(--sl-color-neutral-100);
	border-bottom: 1px solid var(--border-primary);
}

.combobox-list__function-signature,
.combobox-list__function-param {
	font-family: var(--monospace-fonts) !important;
	font-size: 15px;
}

.combobox-list__function-param {
	transition: color 0.3s;
}

.combobox-list__function-param--current {
	color: var(--sl-color-primary-600);
}

.combobox-list__function-description {
	font-size: 14px;
	opacity: 0.8;
}

.combobox-list .function-item {
	padding-left: 20px;
}

.combobox-list .function-item__head-name,
.combobox-list .function-item__head-signature {
	font-family: var(--monospace-fonts) !important;
}

.combobox-list .function-item__head-params {
	opacity: 0.8;
	margin-left: 5px;
	font-size: 14px;
	transition: opacity 0.3s;
}

.combobox-list sl-menu-item:hover .function-item__head-params {
	opacity: 1;
}

.combobox-list .enum-item {
	padding-left: 20px;
	font-family: var(--monospace-fonts);
	font-size: 15px;
}

.combobox-list sl-menu-item::part(label) {
	overflow: visible !important;
}

.combobox-list sl-menu-item::part(submenu-icon) {
	display: none !important;
}

.combobox-list .function-item__description {
	font-size: 13px;
	opacity: 0.8;
	text-wrap: auto;
}

